--- a/Slovak/main/FileExplorer.apk/res/values-sk/strings.xml
+++ b/Slovak/main/FileExplorer.apk/res/values-sk/strings.xml
@@ -63,7 +63,7 @@
     <string name="category_all">Všetko</string>
     <string name="category_apk">Aplikácie</string>
     <string name="category_bluetooth">Bluetooth</string>
-    <string name="category_document">Dokum.</string>
+    <string name="category_document">Dokumenty</string>
     <string name="category_download">Stiahnuté</string>
     <string name="category_editor_mode">Upraviť</string>
     <string name="category_exit_editor_mode">Ukončiť</string>
