--- a/Slovak/main/SecurityCenter.apk/res/values-sk/strings.xml
+++ b/Slovak/main/SecurityCenter.apk/res/values-sk/strings.xml
@@ -514,7 +514,7 @@ alebo zadajte heslo"</string>
     <string name="app_manager_go_to_manger_app">Spravovať</string>
     <string name="app_manager_has_not_data">Žiadne dáta</string>
     <string name="app_manager_have_not_consume">Žiadne</string>
-    <string name="app_manager_hide_system_server">Skryť systémové služby</string>
+    <string name="app_manager_hide_system_server">Skryť systémové aplikácie</string>
     <string name="app_manager_install_other_app">Inštalovať apl. z neznámych zdrojov</string>
     <string name="app_manager_instruction">Inštrukcie</string>
     <string name="app_manager_loading_data">Načítavanie...</string>
@@ -578,7 +578,7 @@ alebo zadajte heslo"</string>
  Nestratíte žiadne dáta aplikácií."</string>
     <string name="app_manager_reset_app_preferences_title">Obnoviť nastavenia aplikácií?</string>
     <string name="app_manager_search_prompt">Nič ste nenašli? Skúste zobraziť všetky aplikácie.</string>
-    <string name="app_manager_show_all_apps">Zobraziť všetky apl.</string>
+    <string name="app_manager_show_all_apps">Zobraziť všetky aplikácie</string>
     <string name="app_manager_show_all_apps_opened">Zobrazenie všetkých aplikácií...</string>
     <string name="app_manager_show_detail_infos">Zobraziť všetko</string>
     <string name="app_manager_sort">Triediť podľa</string>
@@ -811,12 +811,12 @@ alebo zadajte heslo"</string>
     <string name="auto_task_default_do_action">Potom</string>
     <string name="auto_task_default_if_exclude">Ak</string>
     <string name="auto_task_default_task_summary_driver_car">Zapnúť prenosný hotspot pri pripojení k systému auta cez Bluetooth</string>
-    <string name="auto_task_default_task_summary_get_up">Vypnúť režim DND a znova zapnúť Bluetooth, Wi-Fi a mobilné dáta</string>
+    <string name="auto_task_default_task_summary_get_up">Vypnúť režim Nerušiť a znova zapnúť Bluetooth, Wi-Fi a mobilné dáta</string>
     <string name="auto_task_default_task_summary_listen_music">Prehrávanie hudby a výber typu slúchadiel</string>
-    <string name="auto_task_default_task_summary_meet">Naplánovať si čas stretnutia a zapnúť režim DND</string>
-    <string name="auto_task_default_task_summary_noon_break">Naplánovať si čas spánku a zapnúť režim DND</string>
+    <string name="auto_task_default_task_summary_meet">Naplánovať čas stretnutia a zapnúť režim Nerušiť</string>
+    <string name="auto_task_default_task_summary_noon_break">Naplánovať čas spánku a zapnúť režim Nerušiť</string>
     <string name="auto_task_default_task_summary_save_power">Zapnúť šetrič batérie, keď je batéria nižšia ako 30%</string>
-    <string name="auto_task_default_task_summary_sleep">Naplánovať si večierku a prispôsobiť správanie zariadenia</string>
+    <string name="auto_task_default_task_summary_sleep">Naplánovať večierku a prispôsobiť správanie zariadenia</string>
     <string name="auto_task_default_task_summary_watch_video">Otvoriť aplikáciu, zapnúť Wi-Fi, upraviť hlasitosť</string>
     <string name="auto_task_default_task_title_driver_car">Jazda</string>
     <string name="auto_task_default_task_title_get_up">Vstávaj</string>
@@ -884,7 +884,7 @@ alebo zadajte heslo"</string>
     <string name="auto_task_open_bluetooth">Zapnúť Bluetooth</string>
     <string name="auto_task_open_wlan">Zapnúť Wi-Fi</string>
     <string name="auto_task_operation_airplane_mode">Režim Lietadlo</string>
-    <string name="auto_task_operation_auto_brightness">Auto. jas</string>
+    <string name="auto_task_operation_auto_brightness">Auto jas</string>
     <string name="auto_task_operation_bluetooth">Bluetooth</string>
     <string name="auto_task_operation_brightness">Jas displeja</string>
     <string name="auto_task_operation_close">Vypnúť</string>
@@ -910,7 +910,7 @@ alebo zadajte heslo"</string>
     <string name="auto_task_rule_bluetooth">Pri použití Bluetooth s %1$s môžete aplikáciu %2$s otvoriť automaticky. Vytvoriť túto úlohu teraz?</string>
     <string name="auto_task_rule_map_location">Pri používaní máp môžete automaticky zapnúť služby určovania polohy. Vytvoriť túto úlohu teraz?</string>
     <string name="auto_task_rule_read_mode">Pri používaní aplikácií na čítanie môžete automaticky zapnúť režim čítania. Vytvoriť túto úlohu teraz?</string>
-    <string name="auto_task_rule_zen_mode">Režim DND môžete automaticky zapnúť počas zdriemnutia medzi 12:00 a 14:00. Vytvoriť túto úlohu teraz?</string>
+    <string name="auto_task_rule_zen_mode">Režim Nerušiť môžete automaticky zapnúť počas zdriemnutia medzi 12:00 a 14:00. Vytvoriť túto úlohu teraz?</string>
     <string name="auto_task_select_address_company">Práca</string>
     <string name="auto_task_select_address_home">Domov</string>
     <string name="auto_task_select_address_leave">Odísť</string>
@@ -1240,8 +1240,8 @@ alebo zadajte heslo"</string>
     <string name="clean_master_icon_recall_dialog_summary">Pridajte odkaz na plochu pre vymazanie odpadu kedykoľvek.</string>
     <string name="clean_master_icon_recall_dialog_title">Vymazať odpad rýchlejšie</string>
     <string name="clean_master_icon_recall_hint">Pridať odkaz na plochu</string>
-    <string name="clean_master_icon_recall_summary">Pridajte si odkaz na plochu pre čo najrýchlejšie čistenie.</string>
-    <string name="clean_master_icon_recall_title">Vyčistite rýchlejšie</string>
+    <string name="clean_master_icon_recall_summary">Pridať odkaz na plochu pre čo najrýchlejšie čistenie.</string>
+    <string name="clean_master_icon_recall_title">Vyčistiť rýchlejšie</string>
     <string name="clean_master_icon_recall_toast_text">Odkaz bol pridaný</string>
     <string name="cleaned">Vyčistené</string>
     <string name="clear_bigfiles">Vymažte veľké súbory, duplikáty fotografií, a ostatné zbytočné súbory.</string>
@@ -1390,7 +1390,7 @@ For more info check the message you received from your service provider"</string
     <string name="deep_save_memory_clean_summary">Vyčistiť cache ak je zariadenie uzamknuté a zabrániť tak aplikáciám využívať batériu</string>
     <string name="deep_save_ontime_boot_shutdown_summary">Nastaviť čas kedy sa má zariadenie zapnúť a vypnúť</string>
     <string name="deepclean_cache_header_left">Cache: %d</string>
-    <string name="default_condition_summary">Napr. \"Batéria je nižšia ako 30%%\"</string>
+    <string name="default_condition_summary">Napr. \"Batéria je nižšia ako 30%\"</string>
     <string name="default_condition_title">Pridať podmienku</string>
     <string name="default_condition_title_continue">Pridať podmienku</string>
     <string name="default_result_summary">Napr. \"Vypnúť režim v lietadle\"</string>
@@ -1787,7 +1787,7 @@ For more info check the message you received from your service provider"</string
     <string name="fw_oversea">Blokovať hovory zo zahraničia</string>
     <string name="fw_oversea_content">Blokovať prichádzajúce hovory zo zahraničia</string>
     <string name="gallery_confirm_start_activity">"%s nemá prístup ku Galérii a sociálnym médiám. Táto aplikácia chce získať prístup k súborom uloženým v tomto zariadení na zdieľanie položiek. Povoliť?"</string>
-    <string name="game_anti_disturb_msg">DND Hry</string>
+    <string name="game_anti_disturb_msg">Nerušiť Hry</string>
     <string name="game_booster">Zrýchlenie hier</string>
     <string name="game_booster_close">Zrýchlenie hier je vypnuté</string>
     <string name="game_booster_intro">Čo to je</string>
@@ -2097,7 +2097,7 @@ pre kontrolu vašej spotreby"</string>
     <string name="hide_mode_result_summary_text">Upravte nastavenia aplikácií pre úsporu batérie</string>
     <string name="hide_mode_summary_text">Spravovať aplikácie na pozadí pre šetrenie batérie</string>
     <string name="hide_mode_title_text">Šetrenie batérie</string>
-    <string name="hide_system_app">Skryť systémové apl.</string>
+    <string name="hide_system_app">Skryť systémové aplikácie</string>
     <string name="hint_antispam_mode_edit">Vlastný režim</string>
     <string name="hints_ad_header_left">Reklama: %d</string>
     <string name="hints_apk_header_left">Inštalačné apk: %d</string>
@@ -2733,14 +2733,14 @@ Vaše zariadenie je teraz %s rýchlejšie."</string>
     <string name="notification_garbage_clean_size_found_hint">Je čas vyprázdniť odpad!</string>
     <string name="notification_garbage_clean_size_found_text">Máte mnoho odpadu</string>
     <string name="notification_garbage_clean_size_new">Uvoľnite %s na úložisku</string>
-    <string name="notification_garbage_cleanup_summary">Vyčistite odpad (%s) pre zrýchlenie vášho zariadenia</string>
-    <string name="notification_garbage_cleanup_title">Vyčistite odpad</string>
+    <string name="notification_garbage_cleanup_summary">Vyčistiť odpad (%s) pre zrýchlenie vášho zariadenia</string>
+    <string name="notification_garbage_cleanup_title">Vyčistiť odpad</string>
     <string name="notification_item">Zabezpečte vaše aplikácie</string>
     <string name="notification_link_cleaner_2001">Vyčistiť %s odpadu</string>
-    <string name="notification_link_cleaner_2002">Vyčistite odpad pre zrýchlenie zariadenia</string>
+    <string name="notification_link_cleaner_2002">Vyčistiť odpad pre zrýchlenie zariadenia</string>
     <string name="notification_link_cleaner_2003">Ostáva menej ako %s úložiska. Uvoľnite miesto.</string>
     <string name="notification_link_cleaner_2004">Ostáva menej ako %s úložiska. Uvoľnite miesto na úložisku.</string>
-    <string name="notification_link_cleaner_2005">Vyčistite RAM pre zrýchlenie zariadenia</string>
+    <string name="notification_link_cleaner_2005">Vyčistiť RAM pre zrýchlenie zariadenia</string>
     <string name="notification_link_optimizemanage_1011">%d%% RAM je zaplnených. Vyčistite ju.</string>
     <string name="notification_link_optimizemanage_1011_new">%s pamäte je obsadených. Vymazať teraz.</string>
     <string name="notification_low_battery_action_btn">Povoliť</string>
@@ -2759,7 +2759,7 @@ Vaše zariadenie je teraz %s rýchlejšie."</string>
     <string name="notification_masked_subtitle">Skryť upozornenia pre zamknuté aplikácie</string>
     <string name="notification_open_extreme_mode_text">Povolená Extrémna úspora batérie</string>
     <string name="notification_optimize_button_text">Vyčistiť</string>
-    <string name="notification_optimize_message">Vyčistite RAM pre zrýchlenie</string>
+    <string name="notification_optimize_message">Vyčistiť RAM pre zrýchlenie</string>
     <string name="notification_optimize_title">%d%% RAM je obsadených</string>
     <string name="notification_optimize_title_new">%s pamäte je obsadených</string>
     <string name="notification_power_consume_issue_summary">Vysoká spotreba energie</string>
@@ -3074,7 +3074,7 @@ Tento proces skracuje životnosť batérie."</string>
     <string name="permission_instruction_camera">Toto povolenie umožňuje aplikáciám používať fotoaparát na fotografovanie alebo nahrávanie videí.</string>
     <string name="permission_instruction_change_wifi_state">Toto povolenie umožňuje aplikáciám zapínať a vypínať Wi-Fi bez vášho potvrdenia.</string>
     <string name="permission_instruction_device_admin">Toto povolenie umožňuje aplikáciám ovládať vaše zariadenie, čo môže zahŕňať vymazanie údajov, odomknutie zariadenia a zmena hesiel. Toto je vysoko rizikové povolenie.</string>
-    <string name="permission_instruction_dont_disturb">Toto povolenie umožňuje aplikáciám zapnúť a vypnúť režim DND.</string>
+    <string name="permission_instruction_dont_disturb">Toto povolenie umožňuje aplikáciám zapnúť a vypnúť režim Nerušiť.</string>
     <string name="permission_instruction_draw_overlay">Toto povolenie umožňuje aplikáciám zobrazovať plávajúce okná cez akékoľvek iné rozhranie vášho zariadenia, čo môže mať vplyv na bežné používanie iných aplikácií. Škodlivé aplikácie môžu toto povolenie použiť na čítanie alebo zhromažďovanie súkromných informácií (napr. Hesiel) cez priehľadné plávajúce okná.</string>
     <string name="permission_instruction_external_storage">Toto povolenie umožňuje aplikáciám prístup k fotografiám, médiám a súborom vo vašom zariadení. Pri tomto povolení buďte opatrní, aby ste predišli zbytočnému prezradeniu súkromných informácií.</string>
     <string name="permission_instruction_gallery">Z dôvodu ochrany vášho súkromia vám MIUI umožňuje rozhodnúť sa, či povolíte aplikáciám s povolením úložiska prístup do Galérie.</string>
@@ -4131,7 +4131,7 @@ Počas dátového prenosu sa text a obrázky komprimujú na serveri a tým sa ur
     <string name="settings_power_save_ontime_title">Naplánovať</string>
     <string name="settings_share_info">Tu sú možnosti ako bezpečne zdieľať položky z Galérie alebo Súborov:</string>
     <string name="settings_show_detail">Zobraziť podrobnosti</string>
-    <string name="settings_tip">Galéria &gt; Nastavenia</string>
+    <string name="settings_tip">Galéria a Nastavenia</string>
     <string name="settings_title">Bezpečné zdieľanie</string>
     <string name="settings_title_payment_security">Nastavenie bezpečnosti platieb</string>
     <string name="settings_title_permission">Nastavenie povolení</string>
@@ -4359,8 +4359,8 @@ Počas dátového prenosu sa text a obrázky komprimujú na serveri a tým sa ur
     <string name="special_perm_app_title">Priradiť pracovné aplikácie k osobným aplikáciám</string>
     <string name="special_perm_control_notice_msg">Povoliť aplikáciám čítať a ovládať upozornenia</string>
     <string name="special_perm_control_notice_title">Čítať a kontrolovať upozornenia</string>
-    <string name="special_perm_disturb_msg">Povoliť aplikáciám zapnúť režim DND</string>
-    <string name="special_perm_disturb_title">Zapnúť režim DND</string>
+    <string name="special_perm_disturb_msg">Povoliť aplikáciám zapnúť režim Nerušiť</string>
+    <string name="special_perm_disturb_title">Zapnúť režim Nerušiť</string>
     <string name="special_perm_file_msg">Povoliť aplikáciám prístup ku všetkým súborom v tomto zariadení</string>
     <string name="special_perm_file_title">Prístup ku všetkým súborom</string>
     <string name="special_perm_follow_msg">Povoliť aplikáciám sledovať využitie zariadenia</string>
@@ -4855,17 +4855,17 @@ Rešpektujeme a chránime vaše súkromie."</string>
     <string name="task_summary_close_nfc">Vypnúť NFC</string>
     <string name="task_summary_close_rotate_lock">Odomknúť orientáciu</string>
     <string name="task_summary_close_save_battery">Vypnúť šetrič batérie</string>
-    <string name="task_summary_close_screen_display">Vypnúť vždy zapnuté zobrazenie</string>
+    <string name="task_summary_close_screen_display">Vypnúť Ambientný displej</string>
     <string name="task_summary_close_system_touch">Vypnúť hmatovú odozvu</string>
     <string name="task_summary_close_wlan">Vypnúť Wi-Fi</string>
-    <string name="task_summary_close_zen_mode">Vypnúť režim DND</string>
+    <string name="task_summary_close_zen_mode">Vypnúť režim Nerušiť</string>
     <string name="task_summary_open_airplane">Zapnúť režim V lietadle</string>
     <string name="task_summary_open_auto_brightness">Zapnúť automatický jas</string>
     <string name="task_summary_open_bluetooth">Zapnúť Bluetooth</string>
     <string name="task_summary_open_dark_mode">Zapnúť tmavý režim</string>
     <string name="task_summary_open_dc_light">Zapnúť režim proti blikaniu</string>
     <string name="task_summary_open_dial_tone">Zapnúť tóny číselnej klávesnice</string>
-    <string name="task_summary_open_disturb_mode">Zapnúť režim DND</string>
+    <string name="task_summary_open_disturb_mode">Zapnúť režim Nerušiť</string>
     <string name="task_summary_open_drive_mode">Zapnúť režim Auto</string>
     <string name="task_summary_open_eye_care_mode">Zapnúť režim čítania</string>
     <string name="task_summary_open_hotspot">Zapnúť prenosný hotspot</string>
@@ -4876,10 +4876,10 @@ Rešpektujeme a chránime vaše súkromie."</string>
     <string name="task_summary_open_nfc">Zapnúť NFC</string>
     <string name="task_summary_open_rotate_lock">Zamknúť orientáciu</string>
     <string name="task_summary_open_save_battery">Zapnúť šetrič batérie</string>
-    <string name="task_summary_open_screen_display">Zapnúť vždy zapnuté zobrazenie</string>
+    <string name="task_summary_open_screen_display">Zapnúť Ambientný displej</string>
     <string name="task_summary_open_system_touch">Zapnúť hmatovú odozvu</string>
     <string name="task_summary_open_wlan">Zapnúť Wi-Fi</string>
-    <string name="task_summary_open_zen_mode">Zapnúť režim DND</string>
+    <string name="task_summary_open_zen_mode">Zapnúť režim Nerušiť</string>
     <string name="task_title_charge">Nabíjanie</string>
     <string name="task_title_nfc">NFC</string>
     <string name="tc_sms_report_direction">Enquiry code (command in SMS to carrier)</string>
@@ -4949,7 +4949,7 @@ Rešpektujeme a chránime vaše súkromie."</string>
     <string name="tips_dialog_title">"Nepoznáte svoj limit?"</string>
     <string name="tips_message">"Ak si nie ste istý o množstve svojich predplatených dát, môžete ich zistiť vytočením %2$s (%1$s) (Iba Čína)."</string>
     <string name="tips_of_app_manage">Vymazať nepoužívané apl. pre ušetrenie miesta</string>
-    <string name="tips_of_auto_launch_manage">Zabrániť nepoužívaným apl. automatické spustenie</string>
+    <string name="tips_of_auto_launch_manage">Zabrániť nepoužívaným aplikáciam automatické spustenie</string>
     <string name="tips_of_operators_set">Nastaviť spotrebu dát automaticky</string>
     <string name="tips_of_package_set">Nastavte vaše zakúpené dáta a kontrolujte spotrebu dát</string>
     <string name="tips_of_traffic_pack_threshold">Zakúpte si dáta navyše ak sa blížite k vášmu limitu</string>
@@ -4985,7 +4985,7 @@ Rešpektujeme a chránime vaše súkromie."</string>
     <string name="title_condition_lock_screen">Uzamknúť obrazovku</string>
     <string name="title_condition_meeting">Stretnutie</string>
     <string name="title_condition_message">Správa</string>
-    <string name="title_condition_mute">Ticho/DND</string>
+    <string name="title_condition_mute">Ticho/Nerušiť</string>
     <string name="title_condition_nfc">NFC</string>
     <string name="title_condition_start_activity">Otvoriť aplikáciu</string>
     <string name="title_condition_to_somewhere">Príďte na miesto</string>
@@ -5060,14 +5060,14 @@ Rešpektujeme a chránime vaše súkromie."</string>
     <string name="title_result_rotate_off">Orientácia obrazovky</string>
     <string name="title_result_save_battery">Šetrič batérie</string>
     <string name="title_result_screen_brightness">Jas obrazovky</string>
-    <string name="title_result_screen_display">Vždy zapnutý displej</string>
+    <string name="title_result_screen_display">Ambientný displej</string>
     <string name="title_result_start_activity">Otvoriť aplikáciu</string>
     <string name="title_result_switch">Vypnúť</string>
     <string name="title_result_touch">Hmatová spätná väzba</string>
     <string name="title_result_twinkle">Režim proti blikaniu</string>
     <string name="title_result_typeface">Veľkosť textu a hrúbka písma</string>
     <string name="title_result_wlan">Wi-Fi</string>
-    <string name="title_result_zen_mode">Režim DND</string>
+    <string name="title_result_zen_mode">Režim Nerušiť</string>
     <string name="title_safe_mode">Povoliť Bezpečný režim</string>
     <string name="title_saving_switch">Úspora dát je vypnutá</string>
     <string name="title_share_link">Zdieľať URL</string>
