--- a/Slovak/main/framework-ext-res.apk/res/values-sk-rSK/strings.xml
+++ b/Slovak/main/framework-ext-res.apk/res/values-sk-rSK/strings.xml
@@ -263,7 +263,7 @@
     <string name="standard_title">Stíšený</string>
     <string name="start_dump_log">Vytvoriť záznam o chybe</string>
     <string name="status_bar_toggle_ac">Kontrola prístupu</string>
-    <string name="status_bar_toggle_auto_brightness">Auto. jas</string>
+    <string name="status_bar_toggle_auto_brightness">Auto jas</string>
     <string name="status_bar_toggle_battery_saver">Šetrenie batérie</string>
     <string name="status_bar_toggle_bluetooth">Bluetooth</string>
     <string name="status_bar_toggle_brightness">Jas</string>
